feat(backend): updated admin student group logic to also consider enrollment history